agregada funcionalidad registro y login

--- a/Negocio/Negocio.csproj
+++ b/Negocio/Negocio.csproj
@@ -44,6 +44,7 @@
     <Compile Include="NegocioArticulos.cs" />
     <Compile Include="NegocioCategoria.cs" />
     <Compile Include="NegocioMarcas.cs" />
+    <Compile Include="NegocioUsuario.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
