--- a/Negocio/Negocio.csproj
+++ b/Negocio/Negocio.csproj
@@ -46,6 +46,7 @@
     <Compile Include="NegocioMarcas.cs" />
     <Compile Include="NegocioUsuario.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Seguridad.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Datos\Datos.csproj">
